--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
+    "react-animated-weather": "^4.0.1",
     "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-simple-timestamp-to-date": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
